<resources>
    <string name="app_name">Body Tracker</string>
    <string name="next_sentence">Next</string>
    <string name="prev_sentence">Previous</string>
    <string name="finish_sentence">Finish</string>
    <string name="first_time_app" translatable="false">firts_time_login</string>
    <string name="id_user_firebase_app" translatable="false">id_user_firebase</string>
    <string name="id_user_max_protein">id_user_max_protein</string>
    <string name="id_user_max_carbs">id_user_max_carbs</string>
    <string name="id_user_max_fats">id_user_max_fats</string>
    <string name="id_user_max_calories">id_user_max_calories</string>


    <string name="edittext_brithday_hint">Tap to insert a date...</string>
    <string name="height_text">Height</string>
    <string name="weight_text">Weight</string>
    <string name="name_text">Name</string>
    <string name="birthday_text">Birthday</string>
    <string name="gender_text">Gender</string>
    <string name="user_data_text">User data</string>
    <string name="lifestyle_sedentary_title">Sedentary</string>
    <string name="lifestyle_sedentary_description">Unless you do at least 30 minutes per day of intentional exercise, you are considered sedentary</string>
    <string name="lifestyle_moderately_active_title">Lightly Active</string>
    <string name="lifestyle_moderately_active_description">Daily exercise that is equal to walking for 30 minutes at 4mph.  For an adult of average weight, this amount of exercise will burn about 130-160 additional calories.</string>
    <string name="lifestyle_active_title">Active</string>
    <string name="lifestyle_active_description">Daily exercise that is equal to walking for 1 hour and 45 minutes at 4mph.  For an adult of average weight, this amount of exercise will burn about 470-580 additional calories.</string>
    <string name="lifestyle_highly_active_title">Very Active</string>
    <string name="lifestyle_highly_active_description">Daily exercise that is equal to walking for 4 hours and 15 minutes at 4mph.  For an adult of average weight, this amount of exercise will burn about 1,150-1400 additional calories.</string>
    <string name="lifestyle_text">Lifestyle</string>
    <string name="goal_label">Select your goal</string>
    <string name="bodytype_label">Select your body type</string>
    <string name="goal_lose_title">Lose weight</string>
    <string name="goal_maintain_title">Maintain weight</string>
    <string name="goal_gain_title">Gain weight</string>
    <string name="goal_mantain_female_description">An average woman needs to eat about 2000 calories per day to maintain</string>
    <string name="goal_lose_female_description">An average woman needs to eat about 1500 calories to lose one pound of weight per week.</string>
    <string name="goal_gain_female_description">An average woman needs to eat over 2000 calories per day to gain weight.</string>
    <string name="goal_lose_male_description">An average man needs 2000 to lose one pound of weight per week.</string>
    <string name="goal_mantain_male_description">An average man needs 2500 calories to maintain.</string>
    <string name="goal_gain_male_description">An average man needs over  2500 calories to gain weight.</string>
    <string name="target_calories_text">Target calories:</string>
    <string name="protein_label">Protein:</string>
    <string name="carbs_text">Carbs:</string>
    <string name="fats_texts">Fats:</string>
    <string name="bodytype_ectomorph_title">Ectomorph</string>
    <string name="bodytype_endomorph_title">Endomorph</string>
    <string name="bodytype_mesomorph_title">Mesomorph</string>
    <string name="bodytype_ectomorph_description">An ectomorph tends to be thin, and struggles to gain weight as either body fat or muscle. They can eat piles of food and stay looking the same, even when gaining muscular weight is their biggest goal.</string>
    <string name="bodytype_mesomorph_description">The mesomorph has a middle-of-the-road build that takes the best of both worlds. They tend to have wide shoulders, a narrow waist, relatively thin joints, and round muscle bellies.</string>
    <string name="bodytype_endomorph_description">The endomorph tends to gain weight and keep it on. Their build is a little wider than an ectomorph or mesomorph, with a thick ribcage, wide hips, and shorter limbs.</string>
    <string name="tab_layout_home_text">Home</string>
    <string name="tab_layout_meals_text">Meals</string>
    <string name="tab_layout_profile_text">Profile</string>
    <string name="path_add">M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z</string>
    <string name="path_cancel">M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z</string>
    <string name="no_camera_on_device">No camera on this device.</string>
    <string name="request_permission">Would you like to provide acces to the camera to continue?</string>
    <string name="description_info">Info</string>
    <string name="camera_error">This device doesn\'t support Camera2 API</string>
    <string name="product_not_found">Product not found. Please try it again or use other input method.</string>
    <string name="no_internet_connection_message">Something went wrong. Check your internet connection.</string>
    <string name="product_found">Product found! Do you wish to added to the daily chart?</string>
    <string name="ok_text">Ok</string>
    <string name="yes_text">Yes!</string>
    <string name="no_text">No</string>
    <string name="upc_label">UPC:</string>
    <string name="upc_name_text">Name:</string>
    <string name="upc_calories_text">Calories:</string>
    <string name="upc_carbs_text">Carbs:</string>
    <string name="upc_fats_text">Fats:</string>
    <string name="upc_protein_text">Protein:</string>
    <string name="incompatible_encoding">Barcode must be UPC-E or UPC-A Encoded.Try other input method.</string>
    <string name="try_again_text">Try again</string>
    <string name="meal_breakfast_title">Breakfast</string>
    <string name="meal_lunch_title">Lunch</string>
    <string name="meal_dinner_title">Dinner</string>
    <string name="meal_snacks_title">Snacks</string>
    <string name="meal_breakfast_description">Skipping breakfast may make you hungrier and more likely to eat larger meals, which leads to a surge in blood sugar. Such spikes can pave the way for diabetes, high blood pressure and high cholesterol levels, all risk factors that can snowball into a heart attack.</string>
    <string name="meal_lunch_description">Fuel up at the right time. In the 1960s, nutritionist Adelle Davis popularized the mantra “Eat breakfast like a king, lunch like a prince and dinner like a pauper.” Why? Fueling up makes sense earlier in the day, when your body needs the most calories for energy.</string>
    <string name="meal_dinner_description">Don’t overdo it. Calories get burned up no matter when you eat them, so theoretically it’s O.K. to eat after dark. But if you eat a heavy dinner, you’re not as likely to get rid of those calories before you turn in.</string>
    <string name="meal_snacks_description"><![CDATA[A snack is a small service of food and generally eaten between meals. Snacks come in a variety of forms including packaged snack foods and other processed foods, as well as items made from fresh ingredients at home.]]></string>
    <string name="sign_out_text">Sign out</string>
    <string name="external_permission_denied">You should grant permission in order to take pictures</string>
    <string name="search_with_keyword">Add a keyword to search for a recipe...</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="servings_text_label">Servings:</string>
    <string name="total_calories_label">Total calories:</string>
    <string name="cooking_time_label">Cooking time:</string>
    <string name="serving_calories_label">Calories/Serving</string>
    <string name="mark_as_favorite">Add to favorites</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="go_to_instructions_text_for_button">Go to instructions</string>
    <string name="add">Add</string>


    <string-array name="gender_array">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
